--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<footer class="footer">
-  <p class="no-margin-bottom larger">
+<footer class="footer full-width text-center">
+  <p class="footer__legal no-margin-bottom larger">
     <span class="icon-macintosh icon hvr-wobble-horizontal no-margin-bottom"></span>
     <br />
     <i class="icon-cc icon"></i> 2005<script>new Date().getFullYear()>2005&&document.write("-"+new Date().getFullYear());</script>, Filippo Corti.
