--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -1,3 +1,6 @@
+/*------------------------------------*\
+  #CONTACT-FORM
+\*------------------------------------*/
 #contact-form {
   border: 2px solid $accent-color;
   padding: 0;
@@ -12,7 +15,6 @@
     box-shadow: -10px -10px 0px 0px #e9e5fa;
   }
 
-
   ::-webkit-input-placeholder {
     color: #d4ccf5;
     font-weight: normal;
@@ -20,24 +22,21 @@
     font-size: 0.8em;
   }
 
-  .sender-info {
-    display: flex;
-  }
-
   input, textarea {
     width: 100%;
-    margin: 0;
-    border: 0;
-    border-radius: 0;
-    border-bottom: 2px solid $accent-color;
     padding: 1em;
     font-size: 1.3em;
+    border-bottom: 2px solid $accent-color;
     font-family: $primary-font;
-    font-weight: bold;
     color: $accent-color;
 
+    // removes border-right on side by side input
     &:first-child {
       border-right: 2px solid $accent-color;
+    }
+
+    &:focus {
+      outline: none;
     }
 
     @include media-query($small-screen) {
@@ -55,13 +54,9 @@
   }
 
   textarea {
-    border: 0;
     color: $accent-color;
+    border-bottom: 0;
     min-height: 350px;
-  }
-
-  textarea:focus, input:focus{
-    outline: none;
 }
 
   .submit-btn {
@@ -70,10 +65,7 @@
     font-size: 1.2em;
     display: block;
     appearance: none;
-    margin: 0;
     min-width: 100%;
-    border: 0;
-    border-radius: 0;
     color: #fff;
     font-family: $secondary-font;
     font-weight: normal;
