--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,8 +27,8 @@
     _gs('GSN-849283-Q');
   </script>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script src="{{site.baseurl}}/js/typed.js"></script>
-  <script src="{{site.baseurl}}/js/instafeed.min.js"></script>
+  <script src="{{site.baseurl}}/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="{{site.baseurl}}/bower_components/instafeed.js/instafeed.min.js"></script>
+  <script src="{{site.baseurl}}/bower_components/typed.js/dist/typed.min.js"></script>
 
 </head>
