--- a/css/main.scss
+++ b/css/main.scss
@@ -19,6 +19,7 @@ $background-color:        #f7f7f7; // TODO: refactor with Material Design code
 $light-color:             #b1b1b1; // TODO: refactor with Material Design code
 $grey-900:                #212121;
 $grey-300:                #E0E0E0;
+$grey-100:                #F5F5F5;
 
 // Screen sizes
 $small-screen:          667px;
