--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,8 +27,8 @@
     _gs('GSN-849283-Q');
   </script>
 
-  <script src="{{site.baseurl}}/bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="{{site.baseurl}}/bower_components/instafeed.js/instafeed.min.js"></script>
-  <script src="{{site.baseurl}}/bower_components/typed.js/dist/typed.min.js"></script>
+  <script src="{{site.baseurl}}/node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="{{site.baseurl}}/node_modules/instafeed.js/instafeed.min.js"></script>
+  <script src="{{site.baseurl}}/node_modules/typed.js/dist/typed.min.js"></script>
 
 </head>
