Add clicks page and latest articles to home

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,9 +26,12 @@
 
     _gs('GSN-849283-Q');
   </script>
-
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/postscribe/2.0.8/postscribe.min.js"></script>
   <script src="{{site.baseurl}}/node_modules/jquery/dist/jquery.min.js"></script>
   <script src="{{site.baseurl}}/node_modules/instafeed.js/instafeed.min.js"></script>
   <script src="{{site.baseurl}}/node_modules/typed.js/dist/typed.min.js"></script>
+  <script src="{{site.baseurl}}/node_modules/baffle/dist/baffle.min.js"></script>
+
 
 </head>
