--- a/_sass/_atoms.scss
+++ b/_sass/_atoms.scss
@@ -1,8 +1,8 @@
 .tag {
-  border: 1px solid $link-color;
-  color: $link-color;
-  padding: 2px 10px;
-  border-radius: 2px;
+  background: $light-accent-color;
+  color: $accent-color;
+  padding: 0 10px;
+  border-radius: 0;
   margin: 0 0.5em 0.5em 0;
   display: inline-block;
   font-family: $secondary-font;
