--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -10,6 +10,10 @@
   font-family: $secondary-font;
   font-size: 0.7em;
 
+  .icon {
+    top: 2px;
+  }
+
   .icon-macintosh {
     font-size: 2.5em;
   }
