--- a/_sass/_work.scss
+++ b/_sass/_work.scss
@@ -1,4 +1,50 @@
+.page-work {
+
+  .content-work {
+    @include media-query($small-screen) {
+      padding: $mobile-margin;
+    }
+  }
+
+  .sectionLink {
+    color: #222;
+    text-decoration: none;
+    font-size: 1.2em;
+    border: 1px solid transparent;
+    background: #f7f7f7;
+    padding: 1em 2em;
+    display: block;
+    width: 100%;
+    line-height: 1.8;
+    box-shadow: 1px 1px 2px 0 rgba(0,0,0,.1);
+
+    &:hover {
+      border: 1px solid $accent-color;
+      background: $light-accent-color;
+    }
+
+    svg {
+      margin-bottom: 0;
+      position: relative;
+      top: -0.5em;
+      max-width: 28px;
+      float: left;
+      margin-right: 0.8em;
+
+      @include media-query($small-screen) {
+        top: 0.2em;
+        max-width: none;
+      }
+      
+    }
+  }
+}
+
 .page-cv {
+
+  .attention-grabber {
+    margin: 0em auto 3em;
+  }
 
   .content {
     @extend .raised;
@@ -12,7 +58,7 @@
     }
 
     .tag {
-      font-size: 0.8em;
+      font-size: 0.75em;
     }
 
     .job-position:first-of-type {
