--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,7 @@ $grey-700:                #616161;
 $grey-600:                #757575;
 $grey-500:                #9E9E9E;
 $grey-300:                #E0E0E0;
+$grey-200:                #eee;
 $grey-100:                #F5F5F5;
 
 // Screen sizes
