--- a/css/main.scss
+++ b/css/main.scss
@@ -27,6 +27,7 @@ $grey-100:                #F5F5F5;
 
 // Screen sizes
 $small-screen:          667px;
+$medium-screen:         1000px;
 
 // Utilities
 $spacing-unit:          30px;
