--- a/css/main.scss
+++ b/css/main.scss
@@ -51,6 +51,7 @@ $secondary-font:       "Input Mono", "Courier", sans-serif;
         "bookshelf",
         "work",
         "home",
+        "photos",
         "error",
         "footer"
 ;
