--- a/_sass/_atoms.scss
+++ b/_sass/_atoms.scss
@@ -5,8 +5,7 @@
 .tag {
   background: $light-accent-color;
   color: $accent-color;
-  padding: 0 10px;
-  border-radius: 0;
+  padding: 0 1em;
   margin: 0 0.5em 0.5em 0;
   display: inline-block;
   font-family: $secondary-font;
@@ -37,12 +36,11 @@
 
 .primary-btn {
   @include btn($main-text-color, #fff, $grey-200, #fff, $accent-color);
-  font-family: $primary-font;
   border: 2px solid $main-text-color;
-  box-shadow: -5px -5px 0px 0px $main-text-color;
+  box-shadow: -5px -5px 0px $main-text-color;
 
   &:hover {
-    box-shadow: 5px 5px 0px 0px $accent-color;
+    box-shadow: 5px 5px 0px $accent-color;
     color: $accent-color;
     border-color: $accent-color;
   }
@@ -50,8 +48,8 @@
 
 .primary-btn--large {
   @extend .primary-btn;
-  font-size: 1.35em;
-  padding: 0.3em 3em;
+  font-size: 1.25em;
+  padding: 0.4em 2.5em;
 }
 
 .btn-back {
@@ -95,4 +93,46 @@
     }
 
   }
+}
+
+
+.btn-text {
+  background: transparent;
+  font-family: $secondary-font;
+  font-size: 0.75em;
+  color: $link-color;
+  display: block;
+  text-transform: uppercase;
+
+  &:hover {
+    cursor: pointer;
+    background: none;
+    color: $accent-color;
+  }
+}
+
+
+.btn-expand {
+  .icon-angle-down {
+    display: inline-block;
+    font-size: 1.4em;
+  }
+
+  &:hover {
+    .icon-angle-down {
+      transform: rotate(180deg);
+      top: 10px;
+    }
+  }
+}
+
+.btn-expand__pressed {
+  cursor: pointer;
+  color: $accent-color;
+
+  .icon-angle-down {
+    transform: rotate(180deg);
+    top: 10px;
+  }
+
 }
