--- a/_sass/_bookshelf.scss
+++ b/_sass/_bookshelf.scss
@@ -7,7 +7,7 @@
   .sectionLink {
     svg {
       max-width: 45px;
-      top: -0.6em;
+      top: -0.6em; /* adjust icon alignment */
     }
   }
 }
@@ -23,7 +23,7 @@
     width: 180px;
 
     @include media-query($small-screen) {
-      width: 110px;
+      width: 100px;
     }
 
     .book__cover {
@@ -114,19 +114,9 @@
         box-shadow: -5px -5px 0 rgba(255,255,255,0.5);
         border: 1px solid transparent;
 
-        .icon {
-          font-size: 1.4em;
-          display: inline-block;
-        }
-
         &:hover, &.pressed {
           box-shadow: 5px 5px 0 $main-text-color;
           border: 1px solid #fff;
-
-          .icon {
-            transform: rotate(180deg);
-            top: 10px;
-          }
         }
 
       }
