--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -16,6 +16,14 @@
       padding: $mobile-margin;
     }
 
+    p {
+      display: none;
+    }
+
+     p:first-child {
+      display: block;
+    }
+
   }
 
   .featured-links {
@@ -98,6 +106,7 @@
     .section-list__content {
       font-size: 1.2em;
       font-weight: 300;
+      max-width: 400px;
 
       @include media-query($small-screen) {
         margin: 0;
@@ -119,40 +128,6 @@
         margin-bottom: 0.8em;
       }
 
-    }
-  }
-
-  #instafeed {
-    display: flex;
-    flex-flow: wrap;
-    justify-content: center;
-    margin: 5em auto;
-    max-width: 45em;
-
-    @include media-query($small-screen) {
-      display: none;
-    }
-
-    a {
-      margin: 0 0.3em 0.3em 0;
-      display: inline-block;
-      overflow: hidden;
-      background: $light-accent-color;
-      max-width: 200px;
-    }
-
-    img {
-      margin: 0;
-      border-radius: 1px;
-      transition: all .2s ease;
-      vertical-align: middle;
-      mix-blend-mode: multiply;
-      filter: grayscale(100%) contrast(1.2);
-
-      &:hover {
-        transform: scale(1.5);
-        filter: none;
-      }
     }
   }
 
