--- a/_sass/_photos.scss
+++ b/_sass/_photos.scss
@@ -5,7 +5,7 @@
     flex-flow: wrap;
     justify-content: center;
     margin: 5em auto;
-    max-width: 45em;
+    max-width: 90%;
 
     a {
       margin: 0 0.3em 0.3em 0;
