Add indieweb rel attribute to profile links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 
   <a href="../colophon">Colophon</a> •
   <a href="../hi">me@filippocorti.net</a> •
-  <a href="http://twitter.com/philapple">@philapple</a>
+  <a rel="me" href="https://twitter.com/philapple">@philapple</a>
 
   </p>
 </footer>
