Add newsletter prompt

--- a/css/main.scss
+++ b/css/main.scss
@@ -48,6 +48,7 @@ $secondary-font:       "Input Mono", "Courier", sans-serif;
         "header",
         "animations",
         "contact",
+        "contactform",
         "bookshelf",
         "work",
         "home",
