--- a/_layouts/notes.html
+++ b/_layouts/notes.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <article itemscope itemtype="http://schema.org/BlogPosting" class="notes">
-  <h1 itemprop="name headline">{{ page.title }}</h1>
+  <h2 itemprop="name headline no-margin">{{ page.title }}</h2>
 
   <div itemprop="articleBody" class="article-body">
     {{ content }}
