Fix footer relative url issue

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
     <br />
     <i class="icon-cc icon"></i> 2005<script>new Date().getFullYear()>2005&&document.write("-"+new Date().getFullYear());</script>, Filippo Corti.
 
-  <a href="../colophon">Colophon</a> •
-  <a href="../hi">me@filippocorti.net</a> •
+  <a href="{{site.url}}/colophon">Colophon</a> •
+  <a href="{{site.url}}/hi">me@filippocorti.net</a> •
   <a rel="me" href="https://twitter.com/philapple">@philapple</a>
 
   </p>
