--- a/_sass/_animations.scss
+++ b/_sass/_animations.scss
@@ -66,7 +66,8 @@
 .flickering {
   filter: grayscale(1);
   animation-name: flickering;
-  @extend .animated.infinite;
+  @extend .animated;
+  @extend .infinite;
   animation-duration: 2s;
 }
 
