--- a/css/main.scss
+++ b/css/main.scss
@@ -48,11 +48,12 @@ $secondary-font:       "Input Mono", "Courier", sans-serif;
         "header",
         "animations",
         "contact",
-        "contactform",
+        "newsletter",
         "bookshelf",
         "work",
         "home",
         "photos",
+        "notes",
         "error",
         "footer"
 ;
