--- a/_sass/_newsletter.scss
+++ b/_sass/_newsletter.scss
@@ -39,7 +39,7 @@
   width: 100%;
   margin-right: 1em;
   padding: 0.5em 1em;
-  font-family: "Nitti Grotesk";
+  font-family: $primary-font;
   font-size: 1em;
   color: $grey-900;
   border: 1px solid $grey-300;
@@ -60,7 +60,7 @@
   border-radius: 0;
   -webkit-appearance: none;
   margin: 0;
-  font-family: "Input Mono";
+  font-family: $secondary-font;
   text-transform: uppercase;
   padding: 0.6em 1.5em;
   border: 1px solid $accent-color;
