Update home icons and add self-hosted fonts

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
 
   <link rel="me" href="mailto:me@filippocorti.net" />
 
-  <link href="//cloud.webtype.com/css/f915bf03-f9e0-44ec-8ee4-e2be65a9864d.css" rel="stylesheet" type="text/css" />
+  <link href="//cloud.typenetwork.com/projects/2471/fontface.css/" rel="stylesheet" type="text/css">
   <link href="https://file.myfontastic.com/qywfA4ZMUeXpHkQt99X3L5/icons.css" rel="stylesheet">
 
   <link rel="shortcut icon" href="{{ site.url }}/assets/filippo/favicon.ico" type="image/x-icon">
