--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -30,7 +30,7 @@
     text-align: center;
     justify-content: space-between;
     margin: 0 0 $spacing-unit*2;
-    padding: $spacing-unit $spacing-unit*2;
+    padding: $spacing-unit $spacing-unit*2 $spacing-unit*2;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     background: $background-color;
@@ -75,7 +75,7 @@
 
     svg {
       height: 40px;
-      margin-bottom: 5px;
+      margin-bottom: 0;
 
       @include media-query($small-screen) {
         height: 35px;
@@ -111,7 +111,6 @@
 
     .section-list__content {
       font-size: 1.2em;
-      font-weight: 300;
       max-width: 400px;
 
       @include media-query($small-screen) {
